Dodalem ile dni uplynelo

--- a/kalkulator1/src/main/java/com/mycompany/kalkulator/kalkulator.form
+++ b/kalkulator1/src/main/java/com/mycompany/kalkulator/kalkulator.form
@@ -28,6 +28,18 @@
             </MenuItem>
           </SubComponents>
         </Menu>
+        <Menu class="javax.swing.JMenu" name="nf_jMenu_Tools">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Tools"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItemIleDniMieDat">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Ile dni pomiedzy datami"/>
+              </Properties>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
       </SubComponents>
     </Menu>
   </NonVisualComponents>
