--- a/ListaZakupow/src/main/java/com/mycompany/listazakupow/ListaZakupow.form
+++ b/ListaZakupow/src/main/java/com/mycompany/listazakupow/ListaZakupow.form
@@ -86,14 +86,17 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Component id="jTextFieldWpiszCoKupiles" min="-2" pref="135" max="-2" attributes="0"/>
-                                      <EmptySpace max="32767" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <Component id="jTextFieldWpiszCoKupiles" max="32767" attributes="0"/>
+                                      <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
                                       <Component id="jTextFieldPodajWartosc" min="-2" pref="86" max="-2" attributes="0"/>
+                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="jLabelDzisiejszeZakupyy" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <Component id="jLabelDzisiejszeZakupy" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
-                              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                               <Component id="jComboBoxTypZakupionegoTowaru" min="-2" pref="120" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                           </Group>
@@ -101,7 +104,7 @@
                               <Component id="jLabelWpiszcoKup" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
                               <Component id="jLabelPodajWar" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="jLabelTypZakTow" min="-2" pref="129" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
                           </Group>
@@ -115,6 +118,7 @@
                                       <EmptySpace max="-2" attributes="0"/>
                                   </Group>
                               </Group>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -142,14 +146,14 @@
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jTextFieldWpiszCoKupiles" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jTextFieldWpiszCoKupiles" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                           <Component id="jComboBoxTypZakupionegoTowaru" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTextFieldDataZakupu" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTextFieldPodajWartosc" alignment="1" min="-2" pref="20" max="-2" attributes="0"/>
+                          <Component id="jTextFieldDataZakupu" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="jTextFieldPodajWartosc" alignment="1" min="-2" pref="25" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jLabelDzisiejszeZakupyy" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabelDzisiejszeZakupy" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jButtonZapisz" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -254,7 +258,7 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JLabel" name="jLabelDzisiejszeZakupyy">
+            <Component class="javax.swing.JLabel" name="jLabelDzisiejszeZakupy">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="12" style="0"/>
@@ -281,7 +285,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="618" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="623" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
