--- a/ListaZakupow/src/main/java/com/mycompany/listazakupow/ListaZakupow.form
+++ b/ListaZakupow/src/main/java/com/mycompany/listazakupow/ListaZakupow.form
@@ -224,6 +224,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="ZAPISZ"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonZapiszActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabelWydatkiZDzisiaj">
               <Properties>
