--- a/RejestracjaILogowanie/src/main/java/com/mycompany/rejestracjailogowanie/RejestracjaILogowanie.form
+++ b/RejestracjaILogowanie/src/main/java/com/mycompany/rejestracjailogowanie/RejestracjaILogowanie.form
@@ -309,7 +309,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Wprowadzono &#x17a;le dane | Wprowad&#x17a; dane od nowa "/>
+                <Property name="text" type="java.lang.String" value="Wprowadzono &#x17a;le dane | Wprowad&#x17a; poprawnie dane"/>
               </Properties>
             </Component>
           </SubComponents>
